<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/space_16">

    <View
        android:id="@+id/sheet_handle"
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginBottom="@dimen/space_8"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/page_gutter"
        android:paddingEnd="@dimen/page_gutter"
        android:paddingBottom="@dimen/space_8"
        android:text="@string/reader_options"
        android:textAppearance="@style/TextAppearance.NovelsHub.SectionLabel"
        tools:text="Reading options" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sheet_action_font"
        style="@style/Widget.NovelsHub.SheetAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Font_Size"
        app:icon="@drawable/nav_text_format"
        app:iconGravity="start"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sheet_action_background"
        style="@style/Widget.NovelsHub.SheetAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Background"
        app:icon="@drawable/nav_sun"
        app:iconGravity="start"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sheet_action_share"
        style="@style/Widget.NovelsHub.SheetAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShareArticle"
        app:icon="@drawable/nav_share"
        app:iconGravity="start"
        app:iconPadding="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sheet_action_tts"
        style="@style/Widget.NovelsHub.SheetAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Begin_Reading"
        app:icon="@drawable/nav_speaker"
        app:iconGravity="start"
        app:iconPadding="16dp" />

</LinearLayout>
